# kaiview

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  config.toml  index.html  kaiview.db  pyproject.toml  requirements.txt  server.py
.github/workflows/: ci.yml
kaiview/: config_template.toml  index.html  server.py
tests/: test_config.py  test_packaging.py  test_settings.py
