[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kaiview"
version = "1.0.0"
description = "AI-powered developer OS dashboard"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
    "aiosqlite>=0.19.0",
    "watchdog>=3.0.0",
    "httpx>=0.25.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.scripts]
kaiview = "kaiview.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["kaiview*"]

[tool.setuptools.package-data]
kaiview = ["*.html", "*.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
